@@ -124,7 +124,7 @@ sub remove_tapelabel {
 
 sub add_tapelabel {
     my $self = shift;
-    my ($datestamp, $label, $comment, $reuse, $meta, $barcode) = @_;
+    my ($datestamp, $label, $comment, $reuse, $meta, $barcode, $blocksize) = @_;
     $reuse = 1 if !defined $reuse;
 
     # prepend this (presumably new) volume to the beginning of the list
@@ -134,6 +134,7 @@ sub add_tapelabel {
         'reuse'     => $reuse,
         'barcode'   => $barcode,
         'meta'      => $meta,
+        'blocksize' => $blocksize,
         'comment'   => $comment,
     };
     my $tles = $self->{'tles'};
@@ -172,8 +173,9 @@ sub write {
 	my $reuse = $tle->{'reuse'} ? 'reuse' : 'no-reuse';
 	my $barcode = (defined $tle->{'barcode'})? (" BARCODE:" . $tle->{'barcode'}) : '';
 	my $meta = (defined $tle->{'meta'})? (" META:" . $tle->{'meta'}) : '';
+	my $blocksize = (defined $tle->{'blocksize'})? (" BLOCKSIZE:" . $tle->{'blocksize'}) : '';
 	my $comment = (defined $tle->{'comment'})? (" #" . $tle->{'comment'}) : '';
-	$result &&= print $fhn "$datestamp $label $reuse$barcode$meta$comment\n";
+	$result &&= print $fhn "$datestamp $label $reuse$barcode$meta$blocksize$comment\n";
     }
     my $result_close = close($fhn);
     $result &&= $result_close;
@@ -225,8 +227,8 @@ sub _read_tapelist {
     my @tles;
     open(my $fh, "<", $self->{'filename'}) or return $self;
     while (my $line = <$fh>) {
-	my ($datestamp, $label, $reuse, $barcode, $meta, $comment)
-	    = $line =~ m/^([0-9]*)\s([^\s]*)\s(reuse|no-reuse)\s*(?:BARCODE:([^\s]*))?\s*(?:META:([^\s]*))?\s*(?:\#(.*))?$/mx;
+	my ($datestamp, $label, $reuse, $barcode, $meta, $blocksize, $comment)
+	    = $line =~ m/^([0-9]*)\s([^\s]*)\s(reuse|no-reuse)\s*(?:BARCODE:([^\s]*))?\s*(?:META:([^\s]*))?\s*(?:BLOCKSIZE:([^\s]*))?\s*(?:\#(.*))?$/mx;
 	next if !defined $datestamp; # silently filter out bogus lines
 	push @tles, {
 	    'datestamp' => $datestamp,
@@ -234,6 +236,7 @@ sub _read_tapelist {
 	    'reuse' => ($reuse eq 'reuse'),
 	    'barcode' => $barcode,
 	    'meta' => $meta,
+	    'blocksize' => $blocksize,
 	    'comment' => $comment,
 	};
     }
